# prototyping-project2

./: CMakeLists.txt  README.md  package.xml
config/: nav2.lua  navigation2.yaml
description/: test_path.path  test_world.world
description/meshes/: 123.stl  Prototype2_InternetCafe_Map.stl
description/object/: chair.sdf  robot.urdf
description/urdf/: simple_mobile.gv  simple_mobile.urdf  simple_mobile.xacro
launch/: cartographer_simple_mobile.launch.py  navigation.launch.py  run.py  slam.launch.py
map/: map.stl  map.yaml  map_backup_2 copy.yaml
src/: BoxObject.py  DIrection.py  Direction.py  HumanPath.py  MakeEnvNode.py  MotorController.py  PotentialFieldVisualizer.py  ProtoWheelBaseNode.py  SensorPublisher.py  SpawnHumanObjectNode.py  SpawnObjectNode.py  test_path.json
src/application/: main.js  make_path.py  package-lock.json  package.json
src/application/front/: client.ejs  server.ejs
